--- a/examples/dune
+++ b/examples/dune
@@ -1,6 +1,7 @@
 (library
- (name test_ex)  ; Your main library
- (inline_tests)  ; Enable ppx_expect
+ (name test_ex) ; Your main library
+ (public_name cotopes)
+ (inline_tests) ; Enable ppx_expect
  (preprocess
   (pps ppx_expect ppx_deriving_qcheck))
  (instrumentation
