--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,9 @@ jobs:
                   fetch-depth: 0
 
             - name: Installing dependencies for ${{ env.latest }}
-              run: cd ${{ env.latest }} && opam install . --deps-only --yes
+              run: |
+                  cd ${{ env.latest }} && opam install . --deps-only --yes
+                  opam install ppx_deriving_qcheck --yes
 
             - if: false
               name: Checking ocamlformat
